# conan-boilerplate

./: CMakeLists.txt  Makefile  README.md  conanfile.txt  main.cpp
profiles/: release-native
